--- a/Index.css
+++ b/Index.css
@@ -1,1 +1,30 @@
+.button {
+  color: white;
+  background-color: #4267B2;
+  border: none;
+  padding: 10px;
+  margin: 10px;
+  display: inline-block;
+  text-decoration: none;
+}
+
+.button:hover {
+  opacity: 0.8;
+}
+
+.fab {
+  font-size: 20px;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
