--- a/index.css
+++ b/index.css
@@ -1,30 +1,10 @@
-.button {
-  color: white;
-  background-color: #4267B2;
-  border: none;
-  padding: 10px;
-  margin: 10px;
-  display: inline-block;
-  text-decoration: none;
+html, body {
+  margin: 0;
 }
 
-.button:hover {
-  opacity: 0.8;
+#particle-canvas {
+  width: 100%;
+  height: 100vh;
+  background: linear-gradient(to bottom, rgb(10, 10, 50) 0%,rgb(60, 10, 60) 100%);
+  vertical-align: middle;
 }
-
-.fab {
-  font-size: 20px;
-}
-
-.container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
