--- a/index.css
+++ b/index.css
@@ -1,10 +1,7 @@
-html, body {
-  margin: 0;
-}
 
-#particle-canvas {
-  width: 100%;
-  height: 100vh;
-  background: linear-gradient(to bottom, rgb(10, 10, 50) 0%,rgb(60, 10, 60) 100%);
-  vertical-align: middle;
+body{
+  background-image:url('https://www.hypnoticworld.com/site/image-credited.php?image=107.jpg');
+  background-size:cover;
+  margin:0;
+  padding:0;
 }
